--- a/singlePageApplication.html
+++ b/singlePageApplication.html
@@ -220,22 +220,22 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel"  >
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="img/f0.jpg" class="d-block   " alt="Forest -2" style="height: 600px;width:  100%;"  >
+                        <img src="img/f0.jpg" class="d-block w-100   " alt="Forest -2" style="height: 600px;width:  100%;"  >
                     </div>
                       <div class="carousel-item">
-                        <img src="img/f2.jpg" class="d-block  " alt="Forest -2 " style="height: 600px;width: 100%;"  >
+                        <img src="img/f2.jpg" class="d-block w-100 " alt="Forest -2 " style="height: 600px;width: 100%;"  >
                     </div>
                       <div class="carousel-item">
-                        <img src="img/f1.jpg" class="d-block    " alt="Forest - 1"  style="height: 600px;width: 100%;">
+                        <img src="img/f1.jpg" class="d-block  w-100  " alt="Forest - 1"  style="height: 600px;width: 100%;">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/f3.jpg" class="d-block " alt="Forest - 3  "  style="height: 600px;width: 100%;">
+                        <img src="img/f3.jpg" class="d-block w-100" alt="Forest - 3  "  style="height: 600px;width: 100%;">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/f4.jpg" class="d-block  " alt="Forest -4" style="height: 600px;width:100%;" >
+                        <img src="img/f4.jpg" class="d-block  w-100" alt="Forest -4" style="height: 600px;width:100%;" >
                     </div>
                     <div class="carousel-item">
-                        <img src="img/f5.jpg" class="d-block  " alt="Forest -5" style="height: 600px;width: 100%;" >
+                        <img src="img/f5.jpg" class="d-block w-100 " alt="Forest -5" style="height: 600px;width: 100%;" >
                     </div>
                      
                     </div>
