--- a/singlePageApplication.html
+++ b/singlePageApplication.html
@@ -154,7 +154,7 @@
                     style="display: flex; flex-direction: row; justify-content: space-between; margin-left: 40px;margin-right: 40px;">
                     <div style="display: flex;flex-direction: column;">
                         <div> <img src="img/officer.jpg" alt="officer"
-                                style="border-radius:50%;height: 190px;width: 190px;"></div>
+                                style="border-radius:50%; "></div>
                         <div> <label for="name" style="margin-top: 10px;margin-bottom: 10px;">
                                 <h5> Gaurav K. Mori</h5>
                             </label></div>
@@ -165,7 +165,7 @@
 
                     <div style="display: flex;flex-direction: column;">
                         <div> <img src="img/of3.jpg" alt="officer"
-                                style="border-radius:50%;height: 190px;width: 190px;"></div>
+                                style="border-radius:50%; "></div>
                         <div> <label for="name" style="margin-top: 10px;margin-bottom: 10px;">
                                 <h5> Kaushal Patel</h5>
                             </label></div>
@@ -175,7 +175,7 @@
                     </div>
                     <div style="display: flex;flex-direction: column;">
                         <div> <img src="img/of3.jpg" alt="officer"
-                                style="border-radius:50%;height: 190px;width: 190px;"></div>
+                                style="border-radius:50%; "></div>
                         <div> <label for="name" style="margin-top: 10px;margin-bottom: 10px;">
                                 <h5> Jay Prajapati</h5>
                             </label></div>
@@ -185,7 +185,7 @@
                     </div>
                     <div style="display: flex;flex-direction: column;">
                         <div> <img src="img/of3.jpg" alt="officer"
-                                style="border-radius:50%;height: 190px;width: 190px;"></div>
+                                style="border-radius:50%; "></div>
                         <div> <label for="name" style="margin-top: 10px;margin-bottom: 10px;">
                                 <h5> Devansh Maru</h5>
                             </label></div>
@@ -195,7 +195,7 @@
                     </div>
                     <div style="display: flex;flex-direction: column;">
                         <div> <img src="img/of3.jpg" alt="officer"
-                                style="border-radius:50%;height: 190px;width: 190px;"></div>
+                                style="border-radius:50%; "></div>
                         <div> <label for="name" style="margin-top: 10px;margin-bottom: 10px;">
                                 <h5> Arjun Mori</h5>
                             </label></div>
